--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -7,11 +7,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#">Autres jeux</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Mes jeux</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Succès</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Statistiques</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Profil</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToGames()">Autres jeux</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToUserGames()">Mes jeux</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToSuccess()">Succès</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToStatistics()">Statistiques</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="gotToUsers()">Utilisateurs</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="gotToProfile()">Profil</a></li>
       </ul>
     </div>
   </div>
