--- a/src/app/components/home/home-client/home-client.component.scss
+++ b/src/app/components/home/home-client/home-client.component.scss
@@ -40,3 +40,8 @@
 .stat-box {
   border-left: 5px solid #0d6efd;
 }
+
+nav.navbar {
+  position: relative;
+  z-index: 1050; /* au-dessus des carousels, footers, etc. */
+}
