FRONT : All the methods in HomeClient now works, all the call toward the backend works, logout works

--- a/src/app/components/home/home-client/home-client.component.html
+++ b/src/app/components/home/home-client/home-client.component.html
@@ -12,7 +12,7 @@
         <li class="nav-item"><button class="btn btn-link nav-link" (click)="goToSuccess()">Succès</button></li>
         <li class="nav-item"><button class="btn btn-link nav-link" (click)="goToStatistics()">Statistiques</button></li>
         <li class="nav-item"><button class="btn btn-link nav-link" (click)="goToProfile()">Profil</button></li>
-        <li class="nav-item"><button class="btn btn-link nav-link" (click)="goToDisconnect()">Déconnexion</button></li>
+        <li class="nav-item"><button class="btn btn-link nav-link" (click)="logOut()">Déconnexion</button></li>
 
       </ul>
     </div>
