--- a/src/app/components/game/user-games/user-games.component.html
+++ b/src/app/components/game/user-games/user-games.component.html
@@ -14,7 +14,7 @@
       <div *ngIf="userGames.length > 0; else noGames">
         <div class="row">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4" *ngFor="let game of userGames">
-            <div class="card h-100 shadow-sm">
+            <div class="card h-100 shadow-sm" (click)="goToUserGameDetails(game.id)">
               <img [src]="game.gamePublic.picture" class="card-img-top" alt="{{ game.gamePublic.title }}" style="object-fit: cover; height: 150px;">
               <div class="card-body">
                 <h5 class="card-title">{{ game.gamePublic.title }}</h5>
