--- a/src/app/components/game/user-game-carousel/user-game-carousel.component.html
+++ b/src/app/components/game/user-game-carousel/user-game-carousel.component.html
@@ -2,7 +2,10 @@
   <h5>Mes jeux</h5>
   <div class="carousel-wrapper d-flex gap-3 overflow-auto">
     <div class="card" *ngFor="let userGame of userGames">
-      <img [src]="userGame.gamePublic.picture" class="card-img-top" [alt]="userGame.gamePublic.title">
+      <img *ngIf="userGame.gamePublic?.picture"
+           [src]="baseUrl + userGame.gamePublic.picture"
+           class="card-img-top"
+           [alt]="userGame.gamePublic.title">
       <div class="card-body">
         <h6>{{ userGame.gamePublic.title }}</h6>
         <p>Heures jouées : {{ userGame.playHours }}h</p>
