--- a/src/app/components/game/user-game-details/user-game-details.component.html
+++ b/src/app/components/game/user-game-details/user-game-details.component.html
@@ -49,7 +49,7 @@
             ✏️ Modifier les infos personnelles
         </button>
 
-        <button class="btn btn-outline-success" (click)="goToProgression()">
+        <button class="btn btn-outline-success" (click)="goToProgressionForm()">
             📈 Ajouter / Modifier progression
         </button>
 
