--- a/src/app/components/game/user-game-form/user-game-form.component.html
+++ b/src/app/components/game/user-game-form/user-game-form.component.html
@@ -27,10 +27,12 @@
       </select>
     </div>
 
+    <!-- Nouveau champ fichier image -->
     <div class="col-12">
-      <label class="form-label">URL de l'image</label>
-      <input type="url" class="form-control" formControlName="picture" placeholder="https://...">
+      <label class="form-label">Image du jeu</label>
+      <input type="file" class="form-control" (change)="onFileSelected($event)" accept="image/*">
     </div>
+
 
     <!-- Partie UserGame -->
     <div class="col-12 pt-3">
