--- a/src/app/components/home/dashboard/dashboard.component.scss
+++ b/src/app/components/home/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 app-game-carousel,
 app-user-game-carousel,
 app-statistic-summary {
-  border: 2px solid red;
+  border: 2px solid rgb(241, 235, 235);
   display: block;
   margin-bottom: 20px;
 }
