--- a/src/app/components/home/home-admin/home-admin.component.html
+++ b/src/app/components/home/home-admin/home-admin.component.html
@@ -1,7 +1,9 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Accueil</a>
+    <button class="btn btn-link navbar-brand p-0 m-0" (click)="goToHomeAdmin()">
+      <img src="assets/img/GameLibraryOnline_v5_Edited_v1.png" alt="Logo Game Library" class="logo-img">
+    </button>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -12,73 +14,29 @@
         <li class="nav-item"><a class="nav-link" (click)="goToSuccess()">Succès</a></li>
         <li class="nav-item"><a class="nav-link" (click)="goToStatistics()">Statistiques</a></li>
         <li class="nav-item"><a class="nav-link" (click)="gotToUsers()">Utilisateurs</a></li>
-        <li class="nav-item"><a class="nav-link" (click)="gotToProfile()">Profil</a></li>
+        <li class="nav-item"><a class="nav-link" (click)="goToProfile()">Profil</a></li>
+        <li class="nav-item"><button class="btn btn-link nav-link" (click)="logOut()">Déconnexion</button></li>
+
       </ul>
     </div>
   </div>
 </nav>
 
 <!-- Main Content -->
-<div class="container-fluid main-content py-3">
+<div class="container-fluid py-3">
   <div class="row">
     <!-- Sidebar Success Cards -->
-    <aside class="col-lg-3 d-none d-lg-block">
-      <div class="success-sidebar">
-        <div class="card mb-3 success-card" *ngFor="let success of successes">
-          <div class="card-body p-2">
-            <h6 class="card-title">{{ success.gameTitle }}</h6>
-            <p class="card-text small">{{ success.title }}</p>
-          </div>
-        </div>
-      </div>
+    <aside class="col-lg-2 d-none d-lg-block">
+      <app-success-sidebar></app-success-sidebar>
     </aside>
 
-    <!-- Main Sections -->
+    <!-- Dynamic Content -->
     <section class="col-12 col-lg-9">
-      <!-- Autres Jeux Carousel -->
-      <div class="mb-4">
-        <h5>Autres jeux</h5>
-        <div class="carousel-wrapper">
-          <div class="carousel d-flex overflow-auto gap-3">
-            <div class="game-card card" *ngFor="let game of otherGames">
-              <img [src]="game.image" class="card-img-top" alt="game image" />
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Mes Jeux Carousel -->
-      <div class="mb-4">
-        <h5>Mes jeux</h5>
-        <div class="carousel-wrapper">
-          <div class="carousel d-flex overflow-auto gap-3">
-            <div class="game-card card" *ngFor="let game of myGames">
-              <img [src]="game.image" class="card-img-top" alt="game image" />
-              <div class="card-body">
-                <h6>{{ game.title }}</h6>
-                <p class="mb-1">Progression: {{ game.progress }}%</p>
-                <p class="small text-muted">{{ game.info }}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Statistiques -->
-      <div>
-        <h5>Statistiques</h5>
-        <div class="row">
-          <div class="col-6 col-md-4" *ngFor="let stat of stats">
-            <div class="stat-box p-3 mb-3 text-center shadow-sm bg-light rounded">
-              <h6>{{ stat.label }}</h6>
-              <p class="fs-5 fw-bold">{{ stat.value }}</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <router-outlet></router-outlet>
     </section>
   </div>
 </div>
+
 
 <!-- Footer -->
 <footer class="bg-dark text-light text-center py-3 mt-5">
