--- a/src/app/components/home/home-client/home-client.component.html
+++ b/src/app/components/home/home-client/home-client.component.html
@@ -1,7 +1,9 @@
 <!-- Header -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top shadow-sm">
   <div class="container-fluid">
-    <button class="btn btn-link navbar-brand" (click)="goToHomeClient()">Accueil</button>
+    <button class="btn btn-link navbar-brand p-0 m-0" (click)="goToHomeClient()">
+      <img src="assets/img/GameLibraryOnline_v5_Edited_v1.png" alt="Logo Game Library" class="logo-img">
+    </button>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
