--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -1,1 +1,20 @@
-<p>user-list works!</p>
+<div class="container mt-4">
+  <div class="card">
+    <div class="card-header text-center">
+      <h3>Utilisateurs</h3>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li *ngFor="let user of users" class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+        <div class="me-2">
+          <strong>{{ user.firstname }} {{ user.lastname }}</strong> | {{ user.username }} | {{ user.email }}
+        </div>
+        <div class="btn-group">
+          <button class="btn btn-outline-primary btn-sm" (click)="viewUser(user.idUser!)"><i class="bi bi-eye"></i></button>
+          <button class="btn btn-outline-success btn-sm" (click)="editUser(user.idUser!)"><i class="bi bi-pencil"></i></button>
+          <button class="btn btn-outline-danger btn-sm" (click)="deleteUser(user.idUser!)"><i class="bi bi-trash"></i></button>
+
+        </div>
+      </li>
+    </ul>
+  </div>
+</div>
